Just working on the formatting of everything